# Auto-Emailer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.bat
emailer/: main.py  paths.py  routes.py  schemas.py  services_jobs.py  services_mail.py
emailer/static/: DefaultOptions.js  ImageResize.js
emailer/templates/: index.html
emailer/utils/: __init__.py  settings.py
tinymce-dist/langs/: de.js
