[project]
name = "emailer"
version = "0.1.0"
description = ""
authors = [
    {name = "Moritz Enderle",email = "contact@moritzenderle.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.56.1,<5.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "toml (>=0.10.2,<0.11.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.5,<0.1.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "tzdata (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
